# orsoqs

./: CMakeLists.txt  client.c  client.h  common.h  error.c  error.h  liborsoqs.c  liborsoqs.h  liborsoqs.i  msg.c  msg.h  socket.c  socket.h
cmake/: uninstall.cmake
test/: client.c  client.h  connection.c  connection.h  main.c  main.h  socket.c  socket.h  swig.py
